# hough

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cluster.py  distribute.sh  hough.py  median.py  process-one.sh  pyproject.toml  requirements.txt  rotate.sh  run_skew.sh  setup.cfg  skew.py  sortduo.awk  sortduo.sh  stats.php
.github/workflows/: main.yml  release-drafter.yml  release.yml
hough/: __init__.py  analyse.py  cli.py  log_utils.py  process.py  rotate.py  stats.py
samples/: av-000.tif  newman-results.csv
tests/: conftest.py  test_hough.py
