# Big thanks to https://medium.com/georgian-impact-blog/python-tooling-makes-a-project-tick-181d567eea44

[tool.coverage.run]
branch = true
source = ["hough"]
concurrency = ["multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "except KeyboardInterrupt",
    "if __name__ == .__main__.:",
]

[tool.flakehell]
max_line_length = 88
format = "colored"
exclude = [".venv",".git","__pycache__","doc/*","build","dist",".tox"]
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "E501", "W503"]
show_source = true


[tool.poetry]
name = "hough"
version = "0.2.6"
description = "Skew detection and correction in scanned images"
authors = ["qu1j0t3 <support@telegraphics.com.au>", "Joan Touzet <wohali@apache.org>"]
maintainers = ["Joan Touzet <wohali@apache.org>"]
repository = "https://github.com/wohali/hough"
keywords = ["hough", "scan", "rotate", "skew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]
license = "GPL-2.0-only"
readme = "README.md"
packages = [
    { include = "hough" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
docopt-ng = "^0.7.2"
imageio = "^2.8.0"
numpy = "^1.18.2"
scikit-image = ">=0.16.2,<0.18.0"
scipy = "^1.4.1"
termplotlib = "^0.3.0"
pymupdf = "^1.17.0"
filetype = "^1.0.6"
tqdm = "^4.43.0"
coverage = {extras = ["toml"], version = "^5.0.4"}
importlib_metadata = {version = "^2.0.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
#flake8 = "^3.7.9"
isort = "^5.6.4"
pytest = "^6.1.1"
pre-commit = "^2.4.0"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
coverage = {extras = ["toml"], version = "^5.0.4"}
tox = "^3.14.6"
flakehell = "^0.7.0"

[tool.poetry.scripts]
hough = 'hough.cli:run'

[tool.isort]
known_third_party = ["docopt", "filetype", "fitz", "imageio", "numpy", "pytest", "scipy", "skimage", "termplotlib", "tqdm"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/ -v -x --cov=./ --cov-config=setup.cfg --cov-report=term --cov-report=html --cov-report=xml
"""

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
